--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 baseURL: https://aikea.github.io
 languageCode: en-us
 defaultContentLanguage: en
-title: That Damn Blog
+title: Backyard
 theme: papercss-hugo-theme
 googleAnalytics: UA-123
 disqusShortname: yourdisqusshortname
