--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/papercss-hugo-theme"]
 	path = themes/papercss-hugo-theme
 	url = https://github.com/zwbetz-gh/papercss-hugo-theme.git
+[submodule "themes/tale"]
+	path = themes/tale
+	url = https://github.com/EmielH/tale-hugo.git
