--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "themes/tale"]
 	path = themes/tale
 	url = https://github.com/EmielH/tale-hugo.git
+[submodule "themes/tale2"]
+	path = themes/tale2
+	url = https://github.com/EmielH/tale-hugo.git
